# feature-engineering-with-featuretools

./: .gitignore  Feature Engineering with Featuretools (Print).ipynb  Feature Engineering with Featuretools.ipynb  README.md  featuretools-quick-start.ipynb  pyproject.toml
report/: Feature Engineering with Featuretools.html
