[tool.poetry]
name = "wie3007-data-mining"
version = "0.1.0"
description = "Python environment for assignment 1 of WIE3007 Data Mining"
authors = ["hongjiaherng <jiaherng2001@gmail.com>"]
readme = "README.md"
packages = [{include = "wie3007_data_mining"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
featuretools = "^1.28.0"
ipykernel = "^6.26.0"
graphviz = "^0.20.1"
itables = "^1.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
